zeit.content.video changes
==========================

2.2.9 (unreleased)
------------------

- Nothing changed yet.


2.2.8 (2014-06-05)
------------------

- Use gocept.httpserverlayer.custom to avoid port collisions in tests.


2.2.7 (2014-04-22)
------------------

- Removed module file erroneously left over after an earlier merge.


2.2.6 (2014-01-20)
------------------

- Update to new MultiResource API (VIV-282).


2.2.5 (2014-01-08)
------------------

- Fix missing imports.


2.2.4 (2013-09-24)
------------------

- Remove unittest2, we have 2.7 now


2.2.3 (2013-08-14)
------------------

- Update to Python-2.7 and ZTK-1.1.5 (#11005).


2.2.2 (2013-07-08)
------------------

- Fix tests to deal with required keywords (#12478).


2.2.1 (2013-07-01)
------------------

- Don't use special declaration for keywords, this has become unnecessary since
  articles can get tags from the whitelist now, too (#11421).


2.2 (2013-04-23)
----------------

- Video uses autocomplete/whitelist keywords.
- UI improvements: specialized description for landing zone, use large image
  for object details (#11568, 11709).


2.1.1 (2012-01-18)
------------------

- Removed untested, non-working code which went accidentally into the last
  release.


2.1.0 (2012-01-17)
------------------

- Add IPublicationDependecies so that playlists are published when videos
  contained in them are published (#10042).
- Add renditions object and MultiBaseProperty to have different renditions for
  a video


2.0.4 (2011-12-01)
------------------

- Fix XMLReferenceUpdater so it doesn't grow lots of superfluous video-still
  nodes (#10028).


2.0.3 (2011-11-24)
------------------

- Fix access to `id_prefix` for videos and playlists (#10015)


2.0.2 (2011-11-23)
------------------

- Fix 2.0.1 which misses serie.xml file


2.0.1 (2011-11-23)
------------------

- Use special video series.

- Hide the subtitle field.


2.0 (2011-11-13)
----------------
